--- a/barista-matic-app/src/app/barista-matic/components/dashboard/dashboard.component.html
+++ b/barista-matic-app/src/app/barista-matic/components/dashboard/dashboard.component.html
@@ -7,10 +7,10 @@
   </header>
 
   <div class="row g-4">
-    <div class="col-md-4">
+    <div class="col-sm-12 col-md-6 col-lg-4">
       <app-ingredients-inventory></app-ingredients-inventory>
     </div>
-    <div class="col-md-8">
+    <div class="col-sm-12 col-md-6 col-lg-8">
       <app-menu></app-menu>
     </div>
   </div>
