--- a/barista-matic-app/src/app/barista-matic/components/menu/menu.component.html
+++ b/barista-matic-app/src/app/barista-matic/components/menu/menu.component.html
@@ -4,7 +4,7 @@
   </div>
   <div class="card-body">
     <div class="row">
-      <div class="col-md-2 col-lg-4 p-2" *ngFor="let drinkInfo of drinksInfoList">
+      <div class="col-sm-12 col-md-6 col-lg-4 p-2" *ngFor="let drinkInfo of drinksInfoList">
         <div class="card h-100">
           <div class="card-body">
             <h5 class="card-title">{{ drinkInfo.drink.name }}</h5>
